// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListArticles correctly handles empty lists without errors 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [],
      "pageInfo": Object {
        "firstCursor": null,
        "lastCursor": null,
      },
      "totalCount": 0,
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MyJd",
        "lastCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MSJd",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by moreLikeThis and handles URLs 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
      ],
    },
  },
}
`;

exports[`ListArticles filters by replyCount 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MSJd",
        "lastCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MSJd",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by replyRequestCount 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 1,
    },
  },
}
`;

exports[`ListArticles filters by userId, appId and fromUserOfArticleId 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles filters by userId, appId and fromUserOfArticleId 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles lists all articles 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "cursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0NCJd",
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "cursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MyJd",
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "cursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MiJd",
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "cursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MSJd",
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0NCJd",
        "lastCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MSJd",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles sorts 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzQsImRvYyNsaXN0QXJ0aWNsZVRlc3Q0Il0=",
        "lastCursor": "WzEsImRvYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles sorts 2`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest2",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzIsImRvYyNsaXN0QXJ0aWNsZVRlc3QxIl0=",
        "lastCursor": "WzAsImRvYyNsaXN0QXJ0aWNsZVRlc3QzIl0=",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles supports after 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0NCJd",
        "lastCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MSJd",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles supports before 1`] = `
Object {
  "data": Object {
    "ListArticles": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listArticleTest4",
          },
        },
        Object {
          "node": Object {
            "id": "listArticleTest3",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0NCJd",
        "lastCursor": "WyJkb2MjbGlzdEFydGljbGVUZXN0MSJd",
      },
      "totalCount": 4,
    },
  },
}
`;

exports[`ListArticles throws error when author filter is not set correctly 1`] = `
Array [
  [GraphQLError: Both appId and userId must be specified at once],
]
`;

exports[`ListArticles throws error when author filter is not set correctly 2`] = `
Array [
  [GraphQLError: fromUserOfArticleId does not match any existing articles],
]
`;
